Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.11, 5.15, 6.0, 6.1, 6.2
-
Fix Version/s: 5.15.9, 6.3.0 Beta3, 6.4.0 Beta1
-
Component/s: GUI: Printing
-
Labels:None
-
Environment:Ubuntu 19.04
-
Platform/s:
-
Commits:72931f4920 (qt/qtbase/dev) d600a68e65 (qt/qtbase/6.2) 72931f4920 (qt/tqtc-qtbase/dev) a0abf81adc (qt/qtbase/6.3) d600a68e65 (qt/tqtc-qtbase/6.2) a0abf81adc (qt/tqtc-qtbase/6.3) 28e73a91e1 (qt/tqtc-qtbase/5.15) d600a68e65 (qt/tqtc-qtbase/6.2.4)
Description
when we call QPrinter::setDuplex() , the printdilalog not effective, see video.mp4
the document QPrinter::setDuplex() say: Enables double sided printing based on the duplex mode
but the source code say, duplex mode explicitly set by user, QPrint::DuplexAuto otherwise(see:https://github.com/qt/qtbase/blob/dev/src/printsupport/dialogs/qprintdialog_unix.cpp#L260-L262)
so, QPrinter::setDuplex() Should it be validated? Or we need to clarify the document