Fix UI mismatch when QPrinter::setDuplex

Amends fa854f214a3c812e5548ff55d179dd07ef99053b. If user call
QPrinter::setDuplex method, the QPrintDialog explicitDuplexMode value
won't update.

Fix this by:
1) handle device-specific default and value set in QPrinter in
QCupsPrintEngine(Private)
2) handle the explicitly user-selected value in QPrintDialog(Private)

Done-with: Michael Weghorn <m.weghorn@posteo.de>
Fixes: QTBUG-99504
Change-Id: I1a471a8554e83aa4bec8bb95fcc95f9135b0ac8c
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Lars Knoll <lars.knoll@qt.io>
(cherry picked from commit 72931f492092a67c39cd7fb124d54e8752ee4933)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>